--- a/index.html
+++ b/index.html
@@ -4,96 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Académico</title>
-    <link rel="stylesheet" href="css/normalize.css"> 
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="portal-container"> 
+    <div class="portal-container">
         <header>
             <div class="perfil">
-                <img src="imagenes/perfil.webp" alt="Foto de Perfil del Estudiante" class="profile-pic">
+                <img src="imagenes/perfil.webp" alt="foto de Perfil del Estudiante" class="profile-pic">
                 <h1>Estudiante: Jhan Franco Villarroel Siles</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#practicas">Prácticas</a></li>
-                    <li><a href="#proyecto">Proyecto Final</a></li>
+                    <li><a href="#practicas">Practicas</a></l1>
+                    <li><a href="#Proyecto">Proyecto final</a></l1>
                 </ul>
             </nav>
-        </header> 
-
+        </header>
         <main>
-            <section class="practicas" id="practicas">
+            <section class="Practicas" id="practicas">
                 <h2>💻 Prácticas de Tecnología Web I</h2>
                 <div class="practicas-grid">
-                    
-                    <div class="practica">
-                        <span>Práctica 1:</span> 
-                        <p>Servidor Web y Estructura Básica</p>
+
+                    <a href="https://franco-vs.github.io/Practica_1/" target="_blank" class="practica enlace-practica">
+                        <span>Practica 1</span>
+                        <p>Servidor web y Estructura Basica</p>
                         <div class="progress-bar">
                             <div class="progress progress-1"></div>
                         </div>
-                        <small>COMPLETO</small>
-                    </div>
-
-                    <div class="practica">
-                        <span>Práctica 2:</span>
-                        <p>Practica JavaScript.</p>
+                        <small>COMPLETADO</small>
+                    </a>
+                    <a href="https://franco-vs.github.io/practica_2/" target="_blank" class="practica enlace-practica">
+                        <span>Practica 2</span>
+                        <p>Ejercicios en JavaScript</p>
                         <div class="progress-bar">
                             <div class="progress progress-2"></div>
                         </div>
-                        <small>EN PROCESO</small>
-                    </div>
-
-                    <div class="practica">
-                        <span>Práctica 3:</span>
-                        <p>Aplicacion de IA y tecnoligia web.</p>
+                        <small>COMPLETADO</small>
+                    </a>
+                    <a href="https://franco-vs.github.io/Practica_3/" target="_blank" class="practica enlace-practica">
+                        <span>Practica 3</span>
+                        <p>Aplicación de IA y Tecnologia Web</p>
                         <div class="progress-bar">
                             <div class="progress progress-3"></div>
                         </div>
                         <small>EN PROCESO</small>
-                    </div>
-
-                    <div class="practica">
-                        <span>Práctica 4:</span>
-                        <p>Exposición: Servicion y tecnología web.</p>
+                    </a>
+                    <a href="https://franco-vs.github.io/Practica_4/" target="_blank" class="practica enlace-practica">
+                        <span>Practica 4</span>
+                        <p>Exposición: servicios y Tecnologia Web</p>
                         <div class="progress-bar">
                             <div class="progress progress-4"></div>
                         </div>
                         <small>EN PROCESO</small>
-                    </div>
-
-                    <div class="practica">
-                        <span>Práctica 5:</span>
-                        <p>Evaluacion de conocimineto.</p>
+                    </a>
+                    <a href="https://franco-vs.github.io/Practica_5/" target="_blank" class="practica enlace-practica">
+                        <span>Practica 5</span>
+                        <p>Evaluación de Conocimiento</p>
                         <div class="progress-bar">
                             <div class="progress progress-5"></div>
                         </div>
                         <small>EN PROCESO</small>
-                    </div>
-
-                    <div class="practica">
-                        <span>Práctica 6:</span>
-                        <p>Lenguaje de intercambio JSON.</p>
+                    </a>
+                    <a href="https://franco-vs.github.io/Practica_6/" target="_blank" class="practica enlace-practica">
+                        <span>Practica 6</span>
+                        <p>Lenguaje de Intercambio JSON</p>
                         <div class="progress-bar">
                             <div class="progress progress-6"></div>
                         </div>
                         <small>EN PROCESO</small>
-                    </div>
+                    </a>
                 </div>
             </section>
 
-            <hr>
-
-            <section class="proyecto-final" id="proyecto">
-                <h2>🚀 Proyecto Final</h2> 
+            <hr> 
+            <section class="proyecto-final" id="Proyecto">
+                <h2>🚀 Proyecto Final</h2>
                 <div class="proyecto-contenido">
                     <p class="descripcion-proyecto">
-                        Desarrollo de Aplicación Web: basada en un lugar turistico.
+                        Desarrollo de Aplicación Web basada en un lugar turístico.
                     </p>
                     <div class="estado-proyecto">
-                        <button class="ver-proyecto">Ver Proyecto</button> 
-                        <span class="estado">| En Progreso (30% Completado)</span>
+                        <button class="ver-proyecto">Ver Proyecto</button>
+                        <span class="estado">EN PROCESO (50% Completado)</span>
                     </div>
                 </div>
             </section>
@@ -102,15 +95,15 @@
         <footer>
             <div class="footer-contenido">
                 <p>
-                    &copy; 2025 Franco Villarroel 
-                    <span>|</span> 
-                    Ubicación: Bolivia 
+                    &copy;Jhan Franco Villarroel Siles
                     <span>|</span>
-                    <a href="http://www.upds.edu.bo/" target="_blank">UPDS - Cbba.</a>
+                    Ubicación: Bolivia: CBBA
+                    <span>|</span>
+                    <A href="" target="_blank">UPDS - CBBA</A>
                 </p>
-                <p class="derechos">
-                    Todos los derechos reservados.
-                </p>
+                <P class="derechos">
+                    Todos los detechos reservados.
+                </P>
             </div>
         </footer>
     </div>
