--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <small>COMPLETADO</small>
                     </a>
                     <a href="https://franco-vs.github.io/practica_2/" target="_blank" class="practica enlace-practica">
-                        <span>actividad 2</span>
+                        <span>Practica 2</span>
                         <p>Ejercicios en JavaScript</p>
                         <div class="progress-bar">
                             <div class="progress progress-2"></div>
