--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="progress-bar">
                             <div class="progress progress-3"></div>
                         </div>
-                        <small>EN PROCESO</small>
+                        <small>Completado</small>
                     </a>
                     <a href="https://franco-vs.github.io/Practica_4/" target="_blank" class="practica enlace-practica">
                         <span>Practica 4</span>
@@ -56,7 +56,7 @@
                         <div class="progress-bar">
                             <div class="progress progress-4"></div>
                         </div>
-                        <small>EN PROCESO</small>
+                        <small>Completado</small>
                     </a>
                     <a href="https://franco-vs.github.io/Practica_5/" target="_blank" class="practica enlace-practica">
                         <span>Practica 5</span>
