--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="progress-bar">
                             <div class="progress progress-3"></div>
                         </div>
-                        <small>Completado</small>
+                        <small>Pendiente</small>
                     </a>
                     <a href="https://franco-vs.github.io/Practica_4/" target="_blank" class="practica enlace-practica">
                         <span>Practica 4</span>
@@ -64,7 +64,7 @@
                         <div class="progress-bar">
                             <div class="progress progress-5"></div>
                         </div>
-                        <small>EN PROCESO</small>
+                        <small>Completado</small>
                     </a>
                     <a href="https://franco-vs.github.io/Practica_6/" target="_blank" class="practica enlace-practica">
                         <span>Practica 6</span>
@@ -72,7 +72,7 @@
                         <div class="progress-bar">
                             <div class="progress progress-6"></div>
                         </div>
-                        <small>EN PROCESO</small>
+                        <small>Completado</small>
                     </a>
                 </div>
             </section>
