--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#practicas">Practicas</a></l1>
-                    <li><a href="#Proyecto">Proyecto final</a></l1>
+                    <li><a href="https://github.com/FrAnCo-VS/Practica_1">github</a></l1>
                 </ul>
             </nav>
         </header>
@@ -85,13 +84,16 @@
                         Desarrollo de Aplicación Web basada en un lugar turístico.
                     </p>
                     <div class="estado-proyecto">
-                        <button class="ver-proyecto">Ver Proyecto</button>
+                        <a href="https://franco-vs.github.io/Practica_6/" target="_blank">
+                            <button class="ver-proyecto">Ver Proyecto</button>
+                        </a>
                         <span class="estado">EN PROCESO (50% Completado)</span>
                     </div>
                 </div>
             </section>
         </main>
 
+        
         <footer>
             <div class="footer-contenido">
                 <p>
