--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         Desarrollo de Aplicación Web basada en un lugar turístico.
                     </p>
                     <div class="estado-proyecto">
-                        <a href="https://franco-vs.github.io/Practica_6/" target="_blank">
+                        <a href="https://franco-vs.github.io/proyecto/" target="_blank">
                             <button class="ver-proyecto">Ver Proyecto</button>
                         </a>
                         <span class="estado">EN PROCESO (50% Completado)</span>
